# link-notation-objects-codec

./: .github-workflows-test.yml  .gitignore  CLAUDE.md  PARSER_BUG.md  README.md  issue_details.json  pr_status.json  pyproject.toml  test_debug.py
.github/workflows/: test.yml
experiments/: test_link_creation.py  test_string_encoding.py
js/: README.md  package-lock.json  package.json
js/examples/: basic_usage.js
js/src/: codec.js  fuzzy-match.js  index.js  manager.js  qa-database.js
js/tests/: test_basic_types.test.js  test_circular_references.test.js  test_collections.test.js  test_fuzzy_match.test.js  test_manager.test.js  test_qa_database.test.js
python/: README.md  pyproject.toml  test_encoder_fix.py
python/examples/: basic_usage.py
python/experiments/: debug_decode.py  debug_decoder.py  test_codec_simple.py  test_correct_format.py  test_decode_issue.py  test_escape.py  test_failing_cases.py  test_format.py  test_implementation.py  test_implementation2.py  test_links_api.py  test_mutual_dicts.py  test_new_impl.py  test_new_reference_style.py  test_new_reference_style2.py  test_roundtrip.py  test_roundtrip_format.py  test_shared_object.py
python/src/link_notation_objects_codec/: __init__.py  codec.py
python/tests/: test_basic_types.py  test_circular_references.py
src/link_notation_objects_codec/: __init__.py  codec.py
src/link_notation_objects_codec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_basic_types.py  test_circular_references.py  test_collections.py
